--- a/partyboard/www/templates/menu.html
+++ b/partyboard/www/templates/menu.html
@@ -18,17 +18,14 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Login
+        <ion-item menu-close href="#/app/main">
+          Main
         </ion-item>
         <ion-item menu-close href="#/app/search">
           Search
         </ion-item>
         <ion-item menu-close href="#/app/browse">
           Browse
-        </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
         </ion-item>
       </ion-list>
     </ion-content>
