--- a/partyboard/www/templates/menu.html
+++ b/partyboard/www/templates/menu.html
@@ -27,6 +27,13 @@
         <ion-item menu-close href="#/app/browse">
           Browse
         </ion-item>
+        <div class="item item-divider">
+          Candy Bars
+        </div>
+        <ion-item class="item-icon-left" menu-close ng-controller="LoginController" ng-click="logout()">
+          <i class="icon ion-log-out"></i>
+          Logout
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
