--- a/partyboard/www/templates/login.html
+++ b/partyboard/www/templates/login.html
@@ -1,55 +1,22 @@
-<!--
-<ion-modal-view>
-    <ion-header-bar>
-        <h1 class="title">Login</h1>
-    </ion-header-bar>
-    <ion-content>
-        <form ng-submit="doLogin()">
-            <div class="list">
-                <label class="item item-input">
-                    <span class="input-label">Username</span>
-                    <input type="text" ng-model="loginData.username">
-                </label>
-                <label class="item item-input">
-                    <span class="input-label">Password</span>
-                    <input type="password" ng-model="loginData.password">
-                </label>
-                <label class="item">
-                    <button class="button button-block button-balanced" type="submit">Log in</button>
-                </label>
-            </div>
-        </form>
-        <label class="item">
-            <a href="#/app/main" class="button button-block button-positive">Facebook</a>
-        </label>
-    </ion-content>
-</ion-modal-view>
--->
-<ion-modal-view ng-controller="LoginController">
-    <ion-header-bar class="bar-positive">
-        <h1 class="title">LOGIN_HEADER</h1>
-    </ion-header-bar>
-    <ion-content>
-        <form ng-submit="doLogin()" name="loginForm" novalidate="">
-            <div class="list">
-                <label class="item item-input">
-                    <span class="input-label">EMAIL</span>
+<ion-modal-view class="backgrouncColor" title="Login" name="loginForm" ng-controller="LoginController">
+    <ion-content  class="has-header" padding="true">
+        <img class="col text-center" src="../img/logo.png">
+        <form class="list" ng-submit="doLogin()" name="loginForm" novalidate="">
+            <ion-list >
+                <label  class="item item-input">
+                    <span class="input-label">Email</span>
                     <input type="email" name="email" ng-model="loginData.email" ng-init="loginData.email='test@test.cz'"  ng-pattern="/^[_a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,4})$/" required>
                 </label>
                 <label class="item item-input">
-                    <span class="input-label">PASSWORD</span>
+                    <span class="input-label">Password</span>
                     <input type="password" name="password" ng-model="loginData.password" ng-init="loginData.password='heslo'" required>
                 </label>
-
-
-                <label class="item">
-                    <button class="button button-block button-positive" ng-disabled="loginForm.$invalid" type="submit">"LOGIN_BUTTON"</button>
-                </label>
-            </div>
+            </ion-list>
+            <div style="width: 300px; height: 38px;" class="spacer"></div>
+            <button class="button button-balanced button-block icon-left ion-log-out" ng-disabled="loginForm.$invalid" type="submit" >Log in</button>
         </form>
-
-        <button class="button button-clear button-full" ng-click="forgotPassword()">FORGOTPASSWORD_BUTTON</button>
-        <button class="button button-clear button-full" ng-click="modalService.showRegister()">NOTYETREGISTERED_BUTTON</button>
-
+        <button style="margin-top: -25px;" class="button button-positive button-block  icon-left ion-social-facebook-outline">Facebook</button>
+        <a ng-click="forgotPassword()" class="button button-positive button-clear button-block ">Create an account</a>
+        <a ng-click="modalService.showRegister()" class="button button-positive button-clear button-block ">Forget your password</a>
     </ion-content>
 </ion-modal-view>
