--- a/partyboard/www/templates/login.html
+++ b/partyboard/www/templates/login.html
@@ -4,19 +4,19 @@
         <form class="list" ng-submit="doLogin()" name="loginForm" novalidate="">
             <ion-list >
                 <label  class="item item-input">
-                    <span class="input-label">Email</span>
+                    <span class="input-label">{{"email" | translate}}</span>
                     <input type="email" name="email" ng-model="loginData.email" ng-init="loginData.email='test@test.cz'"  ng-pattern="/^[_a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,4})$/" required>
                 </label>
                 <label class="item item-input">
-                    <span class="input-label">Password</span>
+                    <span class="input-label">{{"password" | translate}}</span>
                     <input type="password" name="password" ng-model="loginData.password" ng-init="loginData.password='heslo'" required>
                 </label>
             </ion-list>
             <div style="width: 300px; height: 38px;" class="spacer"></div>
-            <button class="button button-balanced button-block icon-left ion-log-out" ng-disabled="loginForm.$invalid" type="submit" >Log in</button>
+            <button class="button button-balanced button-block icon-left ion-log-in" ng-disabled="loginForm.$invalid" type="submit"> {{"login" | translate}}</button>
         </form>
         <button style="margin-top: -25px;" class="button button-positive button-block  icon-left ion-social-facebook-outline">Facebook</button>
-        <a ng-click="forgotPassword()" class="button button-positive button-clear button-block ">Create an account</a>
-        <a ng-click="modalService.showRegister()" class="button button-positive button-clear button-block ">Forget your password</a>
+        <a ng-click="forgotPassword()" class="button button-positive button-clear button-block ">{{"registration" | translate}}</a>
+        <a ng-click="modalService.showRegister()" class="button button-positive button-clear button-block ">{{"forgetPassword" | translate}}</a>
     </ion-content>
 </ion-modal-view>
