jazyk + pripojeni k internetu

--- a/partyboard/www/templates/login.html
+++ b/partyboard/www/templates/login.html
@@ -1,6 +1,6 @@
 <ion-modal-view class="backgrouncColor" title="Login" name="loginForm" ng-controller="LoginController">
     <ion-content  class="has-header" padding="true">
-        <img class="col text-center" src="../img/logo.png">
+        <img class="col text-center" src="./img/logo.png">
         <form class="list" ng-submit="doLogin()" name="loginForm" novalidate="">
             <ion-list >
                 <label  class="item item-input">
