--- a/partyboard/www/templates/main.html
+++ b/partyboard/www/templates/main.html
@@ -1,5 +1,16 @@
 <ion-view view-title="Main">
     <ion-content>
         <h1>main</h1>
+
     </ion-content>
+    <div class="tabs tabs-icon-left">
+        <a class="tab-item">
+            <i class="icon ion-home"></i>
+            SMS
+        </a>
+        <a class="tab-item">
+            <i class="icon ion-gear-a"></i>
+            Message Internet
+        </a>
+    </div>
 </ion-view>
