zmena ikony, uvodni obrazovky

--- a/partyboard/scss/ionic.app.scss
+++ b/partyboard/scss/ionic.app.scss
@@ -15,6 +15,7 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
+//$dark:                            rgba(29, 29, 29, 0.5) !default;
 
 $modal-inset-mode-break-point:  999999px !default; // aby se modal nezmensoval na ipadu
 
