--- a/partyboard/www/templates/info.html
+++ b/partyboard/www/templates/info.html
@@ -1,6 +1,6 @@
-<ion-view view-title="Main">
+<ion-view view-title='{{"info" | translate}}' class="backgrouncColor">
     <ion-content>
-        <h1>main</h1>
+        <p>Proste tady budou nejaky kecy, obrazky atd...</p>
 
     </ion-content>
     <div class="tabs tabs-icon-left">
