--- a/partyboard/www/templates/setting.html
+++ b/partyboard/www/templates/setting.html
@@ -1,12 +1,34 @@
 <ion-view  view-title='{{"setting" | translate}}' ng-controller="SettingController">
   <ion-content>
-    <div class="list">
-      <label class="item item-input item-select">
-        <div class="input-label">
-          {{"language" | translate}}
-        </div>
-        <select ng-change="changeLanguage(language.shade)" ng-model="language" ng-options="language.name for language in languages"></select>
-      </label>
-    </div>
+
+    <ul class="list">
+
+      <li class="item item-input item-select">
+        <label>
+          <div class="input-label">
+            {{"selectionPB" | translate}}
+          </div>
+          <select ng-change="changeLanguage(language.shade)" ng-model="language" ng-options="language.name for language in languages"></select>
+        </label>
+      </li>
+      <li class="item item-input">
+          <span class="input-label">{{"setNick" | translate}}</span>
+          <input style="background-color: #444; color:white; padding-left: 5px;" maxlength="20" type="text">
+      </li>
+
+      <li class="item item-divider"></li>
+
+      <li class="item item-input item-select">
+        <label>
+          <div class="input-label">
+            {{"language" | translate}}
+          </div>
+          <select ng-change="changeLanguage(language.shade)" ng-model="language" ng-options="language.name for language in languages"></select>
+        </label>
+      </li>
+
+    </ul>
+
+
   </ion-content>
 </ion-view>
