--- a/partyboard/www/templates/menu.html
+++ b/partyboard/www/templates/menu.html
@@ -1,9 +1,8 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-dark">
       <ion-nav-back-button>
       </ion-nav-back-button>
-
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
@@ -13,20 +12,22 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
+    <ion-header-bar class="bar-dark">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close href="#/app/main">
-          Main
-        </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Search
+        <ion-item  class="item-icon-left" menu-close href="#/app/partyboard">
+          <i class="icon ion-android-chat"></i>
+          {{"partyboard" | translate}}
         </ion-item>
         <ion-item class="item-icon-left" menu-close href="#/app/setting">
           <i class="icon ion-android-settings"></i>
           {{"setting" | translate}}
+        </ion-item>
+        <ion-item class="item-icon-left" menu-close href="#/app/info">
+          <i class="icon ion-ios-information-outline"></i>
+          {{"info" | translate}}
         </ion-item>
         <div class="item item-divider">
         </div>
