vytvoreni service pro overeni pripojeni + dalsi upravy okolo toho

--- a/partyboard/www/templates/info.html
+++ b/partyboard/www/templates/info.html
@@ -1,4 +1,4 @@
-<ion-view view-title='{{"info" | translate}}' class="backgrouncColor">
+<ion-view view-title="{{'info' | translate}}" class="backgrouncColor">
     <ion-content>
         <p>Proste tady budou nejaky kecy, obrazky atd...</p>
 
@@ -14,3 +14,16 @@
         </a>
     </div>
 </ion-view>
+
+
+<!--
+<ion-modal-view ng-controller="SettingsController">
+    <ion-header-bar class="bar-positive">
+
+        <div class="buttons">
+            <button class="button button-clear" ng-click="modalService.hideSettings()"><i class="icon ion-ios-arrow-left"></i>{{"BACK_BUTTON" | translate}}</button>
+        </div>
+
+        <h1 class="title">{{"SETTINGS_HEADER" | translate}}</h1>
+    </ion-header-bar>
+-->
