pridani modalniho okna pro registraci + uprava oken(prevod na modalni)

--- a/partyboard/www/templates/login.html
+++ b/partyboard/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-modal-view class="backgrouncColor" title="Login" name="loginForm" ng-controller="LoginController">
+<ion-modal-view class="backgroundColor" title="Login" name="loginForm" ng-controller="LoginController">
     <ion-content  class="has-header" padding="true">
         <img class="col text-center" src="./img/logo.png">
         <form class="list" ng-submit="doLogin()" name="loginForm" novalidate="">
@@ -16,7 +16,7 @@
             <button class="button button-balanced button-block icon-left ion-log-in" ng-disabled="loginForm.$invalid" type="submit"> {{"login" | translate}}</button>
         </form>
         <button style="margin-top: -25px;" class="button button-positive button-block  icon-left ion-social-facebook-outline">Facebook</button>
-        <a ng-click="forgotPassword()" class="button button-positive button-clear button-block ">{{"registration" | translate}}</a>
-        <a ng-click="modalService.showRegister()" class="button button-positive button-clear button-block ">{{"forgetPassword" | translate}}</a>
+        <a ng-click="modalService.showRegistration()" class="button button-positive button-clear button-block ">{{"registration" | translate}}</a>
+        <a ng-click="forgotPassword()" class="button button-positive button-clear button-block ">{{"forgetPassword" | translate}}</a>
     </ion-content>
 </ion-modal-view>
