--- a/partyboard/www/templates/info.html
+++ b/partyboard/www/templates/info.html
@@ -1,4 +1,12 @@
-<ion-view view-title="{{'info' | translate}}" class="backgrouncColor">
+<ion-modal-view ng-controller="InfoController">
+    <ion-header-bar class="bar-dark">
+        <div class="buttons">
+            <button class="button button-clear" ng-click="modalService.hideInfo()"><i
+                    class="icon ion-ios-arrow-left"></i>{{"backButton" | translate}}
+            </button>
+        </div>
+        <h1 class="title">{{"info" | translate}}</h1>
+    </ion-header-bar>
     <ion-content>
         <p>Proste tady budou nejaky kecy, obrazky atd...</p>
 
@@ -13,17 +21,4 @@
             Message Internet
         </a>
     </div>
-</ion-view>
-
-
-<!--
-<ion-modal-view ng-controller="SettingsController">
-    <ion-header-bar class="bar-positive">
-
-        <div class="buttons">
-            <button class="button button-clear" ng-click="modalService.hideSettings()"><i class="icon ion-ios-arrow-left"></i>{{"BACK_BUTTON" | translate}}</button>
-        </div>
-
-        <h1 class="title">{{"SETTINGS_HEADER" | translate}}</h1>
-    </ion-header-bar>
--->
+</ion-modal-view>
