--- a/partyboard/www/templates/partyboard.html
+++ b/partyboard/www/templates/partyboard.html
@@ -1,5 +1,5 @@
-<ion-view class="backgrouncColor" view-title='{{"partyboard" | translate}}'>
-  <ion-content>
-    <h1>TADY BUDE SAMOTNY PARTYBOARD</h1>
-  </ion-content>
+<ion-view class="backgroundColor" view-title='{{"partyboard" | translate}}' ng-controller="PartyboardController">
+    <ion-content>
+        <h1>TADY BUDE SAMOTNY PARTYBOARD</h1>
+    </ion-content>
 </ion-view>
