--- a/partyboard/www/templates/setting.html
+++ b/partyboard/www/templates/setting.html
@@ -1,8 +1,13 @@
-<ion-view  view-title='{{"setting" | translate}}' ng-controller="SettingController">
+<ion-modal-view ng-controller="SettingController">
+  <ion-header-bar class="bar-dark">
+    <div class="buttons">
+      <button class="button button-clear" ng-click="modalService.hideSetting()"><i class="icon ion-ios-arrow-left"></i>{{"backButton" | translate}}</button>
+    </div>
+    <h1 class="title">{{"setting" | translate}}</h1>
+  </ion-header-bar>
+
   <ion-content>
-
     <ul class="list">
-
       <li class="item item-input item-select">
         <label>
           <div class="input-label">
@@ -26,9 +31,6 @@
           <select ng-change="changeLanguage(language.shade)" ng-model="language" ng-options="language.name for language in languages"></select>
         </label>
       </li>
-
     </ul>
-
-
   </ion-content>
-</ion-view>
+</ion-modal-view>
