--- a/partyboard/www/templates/partyboard.html
+++ b/partyboard/www/templates/partyboard.html
@@ -1,5 +1,28 @@
 <ion-view class="backgroundColor" view-title='{{"partyboard" | translate}}' ng-controller="PartyboardController">
     <ion-content>
         <h1>TADY BUDE SAMOTNY PARTYBOARD</h1>
+
+
     </ion-content>
+
+
+    <div class="bar bar-footer bar-balanced" style="height: 80px;">
+
+        <div class="item-input-inset" style="width: 9999px;">
+            <label class="item-input-wrapper">
+                <textarea style="width: 9999px; background-color: #EEE; height: 70px; font-size: 16px;" type="text"
+                          placeholder="{{ 'message' | translate }}" ng-model="message"></textarea>
+            </label>
+
+            <div style="padding-left:8px;">
+                <button class="button button-small" ng-click="send(message)" ng-disabled="message.length == 0">
+                    Submit
+                </button>
+                <div>
+                    {{message.length}} {{"chars" | translate}}
+                </div>
+            </div>
+        </div>
+
+    </div>
 </ion-view>
