--- a/partyboard/www/templates/partyboard.html
+++ b/partyboard/www/templates/partyboard.html
@@ -1,12 +1,10 @@
 <ion-view class="backgroundColor" view-title='{{"partyboard" | translate}}' ng-controller="PartyboardController">
     <ion-content>
         <h1>TADY BUDE SAMOTNY PARTYBOARD</h1>
-
-
     </ion-content>
 
 
-    <div class="bar bar-footer bar-balanced" style="height: 80px;">
+    <div class="bar bar-footer bar-positive" style="height: 80px;">
 
         <div class="item-input-inset" style="width: 9999px;">
             <label class="item-input-wrapper">
