--- a/partyboard/www/templates/setting.html
+++ b/partyboard/www/templates/setting.html
@@ -28,7 +28,7 @@
           <div class="input-label">
             {{"colors" | translate}}
           </div>
-          <select ng-change="colorChange(color.shade)" ng-model="color" ng-options="color.name for color in colors"></select>
+          <select ng-change="colorChange(color)" ng-model="color" ng-options="color.name for color in colors"></select>
         </label>
       </li>
 
