--- a/partyboard/www/templates/partyboard.html
+++ b/partyboard/www/templates/partyboard.html
@@ -1,8 +1,12 @@
 <ion-view class="backgroundColor" view-title='{{"partyboard" | translate}}' ng-controller="PartyboardController">
     <ion-content>
         <h1>TADY BUDE SAMOTNY PARTYBOARD</h1>
-    </ion-content>
+        <h1>TADY BUDE SAMOTNY PARTYBOARD</h1>
+        <h1>TADY BUDE SAMOTNY PARTYBOARD</h1>
+        <h1>TADY BUDE SAMOTNY PARTYBOARD</h1>
+        <h1>TADY BUDE SAMOTNY PARTYBOARD</h1>
 
+    </ion-content>
 
     <div class="bar bar-footer " style="height: 80px; background-color: {{colors.getRgbColor()}}">
 
