--- a/partyboard/www/templates/setting.html
+++ b/partyboard/www/templates/setting.html
@@ -25,7 +25,7 @@
           <div class="input-label">
             {{"setMessage" | translate}}
           </div>
-          <select ng-change="selectionTypeMessage(typeMessage.key)" ng-model="typeMessage" ng-options="typeMessage.name for typeMessage in typeMessages"></select>
+          <select ng-change="selectionTypeMessage(typeMessage)" ng-model="typeMessage" ng-options="typeMessage.name for typeMessage in typeMessages"></select>
         </label>
       </li>
 
