nacitani zprav z netu

--- a/partyboard/www/templates/partyboard.html
+++ b/partyboard/www/templates/partyboard.html
@@ -1,11 +1,11 @@
 <ion-view class="backgroundColor" view-title='{{"partyboard" | translate}}' ng-controller="PartyboardController">
     <ion-content>
-        <h1>TADY BUDE SAMOTNY PARTYBOARD</h1>
-        <h1>TADY BUDE SAMOTNY PARTYBOARD</h1>
-        <h1>TADY BUDE SAMOTNY PARTYBOARD</h1>
-        <h1>TADY BUDE SAMOTNY PARTYBOARD</h1>
-        <h1>TADY BUDE SAMOTNY PARTYBOARD</h1>
-
+        <button ng-click="a()">asd</button>
+        <ionic-list>
+            <ionic-item ng-repeat="b in messages">
+                <p style="color:white;">{{b.nick}} - {{ b.message }}</p>
+            </ionic-item>
+        </ionic-list>
     </ion-content>
 
     <div class="bar bar-footer " style="height: 80px; background-color: {{colors.getRgbColor()}}">
