refres listu, posilani a prijímani zprav

--- a/partyboard/less/main.less
+++ b/partyboard/less/main.less
@@ -10,7 +10,7 @@
   height: @size;
 
   textarea {
-    width: 9999px;
+    //width: 9999px;
     background-color: #EEE;
     height: 70px;
     font-size: 16px;
