--- a/partyboard/www/templates/partyboard.html
+++ b/partyboard/www/templates/partyboard.html
@@ -1,14 +1,22 @@
 <ion-view class="backgroundColor" view-title='{{"partyboard" | translate}}' ng-controller="PartyboardController">
-    <ion-content class="contentPB">
-        <!-- <button ng-click="a()">asd</button> Pokud data budu chtitat natahovat na nejakou udalost -->
+    <ion-content class="contentPB" has-bouncing="true" overflow-scroll="false">
         <ionic-list>
-            <ionic-item  class="viewMessage" ng-repeat="b in messages">
+            <ionic-item  class="viewMessage" ng-repeat="b in result">
                 <div style="background-color: {{colors.getRgbColor()}};">
-                <p>{{b.nick}} - {{ b.message }}</p>
+                <p>{{b.nick}} - {{ b.text }}</p>
                 </div>
             </ionic-item>
+            <li class="backgroundColor" style="text-align: center; list-style-type: none" ng-if="loadingHistory" class="item item-spinner">
+                <ion-spinner icon="android"></ion-spinner>
+            </li>
+            <ion-infinite-scroll on-infinite="loadMore()"
+                                 immediate-check="false"
+                                 icon="none"
+                                 distance="-50px"
+                                 style="height: 0">
+            </ion-infinite-scroll>
         </ionic-list>
-        <ion-infinite-scroll on-infinite="loadMore()"></ion-infinite-scroll> <!-- pokud scrolluju dolu tak se dotahujou dalsi data -->
+
     </ion-content>
     <div class="bar bar-footer footerPB" style="background-color: {{colors.getRgbColor()}}">
         <div class="item-input-inset" style="width: 9999px;">
