--- a/partyboard/www/templates/menu.html
+++ b/partyboard/www/templates/menu.html
@@ -17,11 +17,12 @@
         </ion-header-bar>
         <ion-content>
             <ion-list>
+                <!--
                 <ion-item class="item-icon-left" menu-close href="#/app/partyboard">
                     <i class="icon ion-android-chat"></i>
                     {{"partyboard" | translate}}
                 </ion-item>
-
+                -->
                 <ion-item class="item-icon-left" menu-close ng-click="modalService.showSetting()">
                     <i class="icon ion-android-settings"></i>
                     {{"setting" | translate}}
@@ -31,9 +32,9 @@
                     <i class="icon ion-ios-information-outline"></i>
                     {{"info" | translate}}
                 </ion-item>
-                <div class="item item-divider">
+                <div class="item item-divider" ng-if="true">
                 </div>
-                <ion-item class="item-icon-left" menu-close ng-click="modalService.showAdministration()">
+                <ion-item class="item-icon-left" menu-close ng-click="modalService.showAdministration()" ng-if="true">
                     <i class="icon ion-gear-a"></i>
                     {{"administration" | translate}}
                 </ion-item>
