--- a/partyboard/www/templates/setting.html
+++ b/partyboard/www/templates/setting.html
@@ -13,7 +13,7 @@
           <div class="input-label">
             {{"selectionPB" | translate}}
           </div>
-          <select ng-change="selectionPartyboard(partyboard.shade)" ng-model="partyboard" ng-options="partyboard.name for partyboard in partyboards"></select>
+          <select ng-change="selectionPartyboard(partyboard)" ng-model="partyboard" ng-options="partyboard.name for partyboard in partyboards"></select>
         </label>
       </li>
       <li class="item item-input">
