--- a/partyboard/www/templates/registration.html
+++ b/partyboard/www/templates/registration.html
@@ -13,45 +13,62 @@
             <div class="list">
 
                 <label class="item item-input">
-                    <span class="input-label">{{"FIRST_NAME" | translate}} <i ng-class="{ 'has-error': registerForm.fn.$invalid }" class="error icon ion-android-alert placeholder-icon"></i></span>
-                    <input type="text" name="fn" ng-model="registerData.fn" required>
-                </label>
-
-                <label class="item item-input">
-                    <span class="input-label">{{"LAST_NAME" | translate}} <i ng-class="{ 'has-error': registerForm.ln.$invalid }" class="error icon ion-android-alert placeholder-icon"></i></span>
-                    <input type="text" name="ln" ng-model="registerData.ln" required>
-                </label>
-
-                <label class="item item-input item-select">
-                    <span class="input-label">{{"COUNTRY" | translate}} <i ng-class="{ 'has-error': registerData.co =='' }" class="error icon ion-android-alert placeholder-icon"></i></span>
-                    <select required name="co" ng-model="registerData.co" ng-init="registerData.co=''">
-                        <option value="">{{"SELECT_YOUR_COUNTRY" | translate}}</option>
-                        <option ng-repeat="(key, value) in countries" value="{{key}}">{{value}}</option>
-                    </select>
-                </label>
-
-
-                <label class="item item-input em-gender">
-                    <span class="input-label">{{"GENDER" | translate}} <i ng-class="{ 'has-error': !registerData.ge}" class="error icon ion-android-alert placeholder-icon"></i></span>
-                    <ion-checkbox class="em-gender-cb" name="ge" ng-model="isMale" ng-change="isMale ? registerData.ge='male' : registerData.ge = 'female'; isFemale = false" ng-checked="registerData.ge === 'male'">{{"MALE" | translate}}</ion-checkbox>
-                    <ion-checkbox class="em-gender-cb" name="ge" ng-model="isFemale" ng-change="isFemale ? registerData.ge='female' : registerData.ge = 'male'; isMale = false" ng-checked="registerData.ge === 'female'">{{"FEMALE" | translate}}</ion-checkbox>
-                </label>
-
-
-                <label class="item item-input">
-                    <span class="input-label">{{"EMAIL" | translate}} <i ng-class="{ 'has-error': registerForm.email.$invalid }" class="error icon ion-android-alert placeholder-icon"></i></span>
+                    <span class="input-label">{{"email" | translate}} <i ng-class="{ 'has-error': registerForm.email.$invalid }" class="error icon ion-android-alert placeholder-icon"></i></span>
                     <input type="email" name="email" ng-model="registerData.email" ng-pattern="/^[_a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,4})$/" required>
                 </label>
 
                 <label class="item item-input">
-                    <span class="input-label">{{"PASSWORD" | translate}} <i ng-class="{ 'has-error': registerForm.password.$invalid }" class="error icon ion-android-alert placeholder-icon"></i></span>
+                    <span class="input-label">{{"password" | translate}} <i ng-class="{ 'has-error': registerForm.password.$invalid }" class="error icon ion-android-alert placeholder-icon"></i></span>
                     <input type="password" name="password" ng-model="registerData.password" required>
                 </label>
 
+                <label class="item item-input">
+                    <span class="input-label">{{"checkPassword" | translate}} <i ng-class="{ 'has-error': registerForm.password.$invalid }" class="error icon ion-android-alert placeholder-icon"></i></span>
+                    <input type="password" name="checkPassword" ng-model="registerData.checkPassword" required>
+                </label>
+
+                <label class="item item-divider"></label>
+
+                <label class="item item-input">
+                    <span class="input-label">{{"firstName" | translate}} <i ng-class="{ 'has-error': registerForm.firstName.$invalid }" class="error icon ion-android-alert placeholder-icon"></i></span>
+                    <input type="text" name="firstName" ng-model="registerData.firstName" required>
+                </label>
+
+                <label class="item item-input">
+                    <span class="input-label">{{"lastName" | translate}} <i ng-class="{ 'has-error': registerForm.lastName.$invalid }" class="error icon ion-android-alert placeholder-icon"></i></span>
+                    <input type="text" name="lastName" ng-model="registerData.lastName" required>
+                </label>
+
+                <label class="item item-input">
+                    <span class="input-label">{{"nick" | translate}} <i ng-class="{ 'has-error': registerForm.nick.$invalid }" class="error icon ion-android-alert placeholder-icon"></i></span>
+                    <input type="text" name="nick" ng-model="registerData.nick" required>
+                </label>
+
+                <label class="item item-input">
+                    <span class="input-label">{{"phone" | translate}} <i ng-class="{ 'has-error': registerForm.phone.$invalid }" class="error icon ion-android-alert placeholder-icon"></i></span>
+                    <input type="text" name="phone" ng-model="registerData.phone" required>
+                </label>
+
+                <label class="item item-input">
+                    <span class="input-label">{{"birthday" | translate}} <i ng-class="{ 'has-error': registerForm.birthday.$invalid }" class="error icon ion-android-alert placeholder-icon"></i></span>
+                    <input type="date" name="birthday" ng-model="registerData.birthday" required>
+                </label>
+                <!--<label class="item item-input em-gender">-->
+                    <!--<span class="input-label">{{"GENDER" | translate}} <i ng-class="{ 'has-error': !registerData.ge}" class="error icon ion-android-alert placeholder-icon"></i></span>-->
+                    <!--<ion-checkbox class="em-gender-cb" name="ge" ng-model="isMale" ng-change="isMale ? registerData.ge='male' : registerData.ge = 'female'; isFemale = false" ng-checked="registerData.ge === 'male'">{{"MALE" | translate}}</ion-checkbox>-->
+                    <!--<ion-checkbox class="em-gender-cb" name="ge" ng-model="isFemale" ng-change="isFemale ? registerData.ge='female' : registerData.ge = 'male'; isMale = false" ng-checked="registerData.ge === 'female'">{{"FEMALE" | translate}}</ion-checkbox>-->
+                <!--</label>-->
+
+                <label class="item item-input item-select">
+                    <span class="input-label">{{"town" | translate}} <i ng-class="{ 'has-error': registerForm.town == '' }" class="error icon ion-android-alert placeholder-icon"></i></span>
+                    <select required name="town" ng-model="registerData.town">
+                        <option ng-repeat="(key, value) in towns" value="{{value.id_town}}">{{value.name}}</option>
+                    </select>
+                </label>
 
                 <!--SUBMIT-->
                 <label class="item">
-                    <button class="button button-block button-positive" ng-disabled="registerForm.$invalid || !registerData.ge" type="submit">{{"REGISTER_BUTTON" | translate}}</button>
+                    <button class="button button-block button-balanced"  type="submit">{{"register" | translate}}</button> <!-- ng-disabled="registerForm.$invalid || !registerData.ge" -->
                 </label>
             </div>
         </form>
