--- a/partyboard/www/templates/setting.html
+++ b/partyboard/www/templates/setting.html
@@ -18,7 +18,7 @@
       </li>
       <li class="item item-input">
           <span class="input-label">{{"setNick" | translate}}</span>
-          <input ng-change="nickChange(nick)" ng-model="nick" style="background-color: #444; color:white; padding-left: 5px;" maxlength="15" type="text">
+          <input ng-readonly="true" style="text-align: center; background-color: white;" ng-value="userFactory.getNick()" type="text">
       </li>
       <li class="item item-input item-select">
         <label>
