--- a/partyboard/less/main.less
+++ b/partyboard/less/main.less
@@ -51,11 +51,18 @@
 }
 
 
-/*
+
 .obalMsg{
   clear:both;
   display: table;
-}*/
+}
+.loadingClose{
+  position:relative;
+  top:-3ch;
+  right: -3.5ch;
+  margin-left: -3ch;
+}
+
 .hideButton {
   display: none;
 }
