--- a/partyboard/www/css/main.css
+++ b/partyboard/www/css/main.css
@@ -35,11 +35,16 @@
 .has-error {
   display: inline;
 }
-/*
-.obalMsg{
-  clear:both;
+.obalMsg {
+  clear: both;
   display: table;
-}*/
+}
+.loadingClose {
+  position: relative;
+  top: -3ch;
+  right: -3.5ch;
+  margin-left: -3ch;
+}
 .hideButton {
   display: none;
 }
