--- a/partyboard/www/templates/menu.html
+++ b/partyboard/www/templates/menu.html
@@ -32,9 +32,9 @@
                     <i class="icon ion-ios-information-outline"></i>
                     {{"info" | translate}}
                 </ion-item>
-                <div class="item item-divider" ng-if="true">
+                <div class="item item-divider" ng-class="{ 'hideButton': !userFactory.getPermissions().admin }">
                 </div>
-                <ion-item class="item-icon-left" menu-close ng-click="modalService.showAdministration()" ng-if="true">
+                <ion-item class="item-icon-left" menu-close ng-click="modalService.showAdministration()" ng-class="{ 'hideButton': !userFactory.getPermissions().admin }">
                     <i class="icon ion-gear-a"></i>
                     {{"administration" | translate}}
                 </ion-item>
