--- a/partyboard/www/templates/partyboard.html
+++ b/partyboard/www/templates/partyboard.html
@@ -4,34 +4,30 @@
         </button>
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
-        <button class="button icon ion-gear-a"
-                ng-click="data.showDelete = !data.showDelete;"></button>
+        <button class="button icon ion-gear-a" ng-class="{ 'hideButton': !userFactory.getPermissions().admin }"
+                ng-click="data.showAdministration = !data.showAdministration;"></button>
     </ion-nav-buttons>
 
     <ion-content class="contentPB" on-drag-end="historyData($event)" has-bouncing="true" overflow-scroll="false">
-        <!--<ionic-list>-->
-            <!--<ionic-item class="viewMessage" ng-repeat="msg in result.slice().reverse()">-->
-                <!--<div class="obalMsg" style="background-color: {{colors.getRgbColor()}};">-->
-                    <!--&lt;!&ndash;<p>&ndash;&gt;-->
-                        <!--&lt;!&ndash;<span>{{ msg.id_incomming_message}}:{{msg.nick}} - {{ msg.text }}</span>&ndash;&gt;-->
-                        <!--&lt;!&ndash;<a style="float:right" ng-class="{'hideButton': data.showDelete==true}" class="ion-minus-circled"></a>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</p>&ndash;&gt;-->
-                    <!--<div>{{ msg.id_incomming_message}}:{{msg.nick}} - {{ msg.text }}</div>-->
-                    <!--<div style="display: table-cell;"><a ng-class="{'hideButton': data.showDelete==true}" class="ion-minus-circled"></a></div>-->
-                <!--</div>-->
-            <!--</ionic-item>-->
-        <!--</ionic-list>-->
+        <ionic-list>
+            <ionic-item class="viewMessage" ng-repeat="msg in result.slice().reverse()">
+                <div class="obalMsg" style="background-color: {{colors.getRgbColor()}};">
+                    <!--<p>-->
+                        <!--<span>{{ msg.id_incomming_message}}:{{msg.nick}} - {{ msg.text }}</span>-->
+                        <!--<a style="float:right" ng-class="{'hideButton': data.showAdministration==true}" class="ion-minus-circled"></a>-->
+                    <!--</p>-->
+                    <div>{{ msg.id_incomming_message}}:{{msg.nick}} - {{ msg.text }}</div>
+                    <div style="display: table-cell;"><a ng-class="{'hideButton': data.showAdministration===true}" class="ion-gear-a" ng-click="administration(msg)"></a></div>
+                </div>
+            </ionic-item>
+        </ionic-list>
 
-        <ion-list show-reorder="data.showDelete">
-            <ion-item class="viewMessage" ng-repeat="msg in result.slice().reverse()">
-                {{ msg.id_incomming_message}}:{{msg.nick}} - {{ msg.text }}
-                <!--<ion-option-button ng-if="false" class="button-assertive" ng-click="delete(msg)">Edit</ion-option-button>-->
-                <ion-reorder-button class="ion-gear-a" ng-click="delete(msg)"></ion-reorder-button>
-                <!--<ion-delete-button class="ion-minus-circled"-->
-                                   <!--ng-click="delete(msg)">-->
-                <!--</ion-delete-button>-->
-            </ion-item>
-        </ion-list>
+        <!--<ion-list show-reorder="data.showAdministration">-->
+            <!--<ion-item class="viewMessage" ng-repeat="msg in result.slice().reverse()">-->
+                <!--{{ msg.id_incomming_message}}:{{msg.nick}} - {{ msg.text }}-->
+                <!--<ion-reorder-button class="ion-gear-a" ng-click="administration(msg)"></ion-reorder-button>-->
+            <!--</ion-item>-->
+        <!--</ion-list>-->
 
         <li class="backgroundColor" style="text-align: center; list-style-type: none" ng-if="loadingHistory"
             class="item item-spinner">
@@ -41,7 +37,7 @@
                              immediate-check="false"
                              icon="none"
                              distance="-50px"
-                             style="height: 0">
+                             style="height:0px">
         </ion-infinite-scroll>
 
     </ion-content>
@@ -49,15 +45,15 @@
         <div class="item-input-inset" style="width: 9999px;">
             <label class="item-input-wrapper">
                     <textarea style="width:100%" type="text" placeholder="{{ 'message' | translate }}" maxlength="160"
-                              ng-model="message"></textarea>
+                              ng-model="data.message"></textarea>
             </label>
 
             <div style="padding-left:8px;">
-                <button class="button button-small" ng-click="send(message)" ng-disabled="message.length == 0">
+                <button class="button button-small" ng-click="send(data.message)" ng-disabled="data.message.length == 0">
                     {{ 'smsSend' | translate }}
                 </button>
                 <div style="color:white;">
-                    {{message.length}} {{"chars" | translate}}
+                    {{data.message.length}} {{"chars" | translate}}
                 </div>
             </div>
         </div>
